# beat-audio-player-rs

./: .gitignore  Cargo.toml  README.md  build.rs  meson.build  ru.slie.beat.json
data/: meson.build  ru.slie.beat.appdata.xml.in  ru.slie.beat.desktop.in  ru.slie.beat.gschema.xml  ru.slie.beat.gschema.xml.in
data/icons/: meson.build
data/resources/: meson.build  ru.slie.beat.appdata.xml.in
data/resources/ui/: window.ui
po/: POTFILES  beat.pot  meson.build  ru.po
resources/: beat.gresource.xml
resources/ui/: footer.ui  header.ui  progress.ui  window.ui
src/: config.rs  config.rs.in  main.rs  meson.build  queue.rs
src/app/: connector.rs  core.rs  imp.rs  mod.rs  window_actions.rs
src/app/playlist/: mod.rs  playlist.rs
src/app/relation/: bus.rs  channel.rs  header.rs  mod.rs  notebook.rs  progress.rs
src/player/: actions.rs  bus.rs  imp.rs  mod.rs  pipeline.rs  player.rs
src/structs/: action.rs  mod.rs  track.rs
src/structs/queue/: mod.rs  queue.rs
src/ui/: cli.rs  main.rs  mod.rs
src/ui/footer/: imp.rs  mod.rs
src/ui/header/: imp.rs  mod.rs
src/ui/playlist/: mod.rs  store.rs  widget.rs
src/ui/window/: actions.rs  files.rs  footer.rs  header.rs  imp.rs  mod.rs  notebook.rs  progress.rs  template.rs  widget.rs
src/ui/window/notebook/: actions.rs  imp.rs  mod.rs  tabs.rs  template.rs  track_ref.rs
src/ui/window/notebook/playlist/: cols.rs  mod.rs  store.rs  track.rs  widget.rs
src/ui/window/notebook/playlist/cell_render/: mod.rs  widget.rs
src/ui/window/notebook/tab/: mod.rs  widget.rs
src/ui/window/spectrum/: col.rs  draw.rs  imp.rs  mod.rs  spectrum.rs  utils.rs
src/ui/window/tab/: mod.rs  widget.rs
src/utils/: format.rs  meta.rs  mod.rs  settings.rs
