[package]
name = "beat-autio-player"
version = "0.1.0"
edition = "2021"

[dependencies]
gstreamer = { version = "^0.19.2", features = ["v1_20"] }
gstreamer-player = { version = "^0.19.2", features = ["v1_20"] }
gtk = { version = "^0.5.3", package = "gtk4", features = ["v4_8"] }
audiotags = "^0.4.1"
num-integer = "^0.1.45"


[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]